test_output.txt
   Compiling the_dark_candle v0.1.0 (/home/pk/Devel/the-dark-candle)
error[E0308]: mismatched types
    --> src/gpu/voxel_compute.rs:2149:19
     |
2149 |             seed: planet.seed as u64,
     |                   ^^^^^^^^^^^^^^^^^^ expected `u32`, found `u64`

error[E0560]: struct `world::planet::PlanetConfig` has no field named `grid_level`
    --> src/gpu/voxel_compute.rs:2150:13
     |
2150 |             grid_level: 4,
     |             ^^^^^^^^^^ `world::planet::PlanetConfig` does not have this field
     |
     = note: available fields are: `mode`, `mean_radius`, `sea_level_radius`, `surface_gravity`, `rotation_rate` ... and 14 others

error[E0308]: mismatched types
    --> src/gpu/voxel_compute.rs:2153:58
     |
2153 |         let pd = Arc::new(crate::planet::PlanetData::new(gen_cfg));
     |                           ------------------------------ ^^^^^^^ expected `planet::PlanetConfig`, found `world::planet::PlanetConfig`
     |                           |
     |                           arguments to this function are incorrect
     |
     = note: `world::planet::PlanetConfig` and `planet::PlanetConfig` have similar names, but are actually distinct types
note: `world::planet::PlanetConfig` is defined in module `crate::world::planet` of the current crate
    --> src/world/planet.rs:56:1
     |
  56 | pub struct PlanetConfig {
     | ^^^^^^^^^^^^^^^^^^^^^^^
note: `planet::PlanetConfig` is defined in module `crate::planet` of the current crate
    --> src/planet/mod.rs:119:1
     |
 119 | pub struct PlanetConfig {
     | ^^^^^^^^^^^^^^^^^^^^^^^
note: associated function defined here
    --> src/planet/mod.rs:248:12
     |
 248 |     pub fn new(config: PlanetConfig) -> Self {
     |            ^^^ --------------------

Some errors have detailed explanations: E0308, E0560.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `the_dark_candle` (lib test) due to 3 previous errors
